Project

General

Profile

Actions

Bug #22101

closed

rgw_asio_client.cc compilation failure with boost version 1.64+

Added by Casey Bodley over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The beast library changes its boost::beast::string_view typedef from boost::string_ref to boost::string_view if BOOST_VERSION >= 106400. We pass this string type to RGWEnv::set(boost::string_ref), so it fails to compile with boost 1.64 and above:

/home/jenkins/workspace/ceph-master/src/rgw/rgw_asio_client.cc:35:33: error: no viable conversion from 'const boost::basic_string_view<char, std::__1::char_traits<char> >' to 'const boost::string_ref' (aka 'const basic_string_ref<char, std::char_traits<char> >')
      env.set("CONTENT_LENGTH", value);

Actions #1

Updated by Casey Bodley over 6 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Yuri Weinstein over 6 years ago

Casey Bodley wrote:

https://github.com/ceph/ceph/pull/18866

merged

Actions #3

Updated by Casey Bodley over 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF